# Data-retrieval

./: Dockerfile  ExcelConverter.py  README.md  RunAll.py  TextReader.py  WordConverter.py  config.json  pyproject.toml  summary.docx  summary.xlsx
output/: ccss_AUTO_SHARED_QA2.txt  ccss_AUTO_SHARED_QA3.txt  ccss_AUTO_SHARED_QA5.txt  cm.txt  mpdss.txt  nlgs_llms.txt  nlpsinfo.txt  nssmtps.txt  profile.txt  pss.txt
